# aiounu

./: .gitignore  README.md  TODO  pyproject.toml  setup.py  unu.py
aiounu/: __init__.py
tests/: test_shorten.py
